--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,14 +1,14 @@
 # Adds namespace to all resources.
-#namespace: kubernetesoperatordemo-system
-namespace: default
+namespace: kubernetesoperatordemo-system
+#namespace: default
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-#namePrefix: kubernetesoperatordemo-
-namePrefix: default-
+namePrefix: kubernetesoperatordemo-
+#namePrefix: default-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
